# nbia-toolkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  driver.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml  main_old.yml
devnotes/: CI-CD_2024-03-17.md  README.md  classes_nbiatoolkit.dot  packages_nbiatoolkit.dot  sequence-diagram_2024-03-17.md  updateREADME.sh
docs/: .readthedocs.yml  CHANGELOG.md  Example.ipynb  InitializeClient.rst  Makefile  Tutorial.ipynb  changelog.md  conf.py  example.ipynb  index.md  index.rst  make.bat  requirements.txt  test.rst
docs/_html_notebooks/: test_setup.ipynb
docs/_static/: test_setup.html
docs/_static/css/: custom.css
docs/download_api/: DownloadSeries.rst
docs/getting_started/: InitializeClient.rst  Installation.rst  NBIA.md
docs/markdowns/: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  Installation.md  NBIA.md
docs/project_info/: CHANGELOG.md
docs/querying_api/: ExploringCollections.rst  ExploringModalities.rst  ExploringPatients.rst  ExploringSeries.rst  ExploringStudies.rst
docs/tutorial_files/: 1_InitializeClient.rst  2_ExploreCollections.rst  logger.rst
src/: auth.py  main.py  nbia.py
src/nbiatoolkit/: __init__.py  auth.py  nbia.py  nbia_cli.py
src/nbiatoolkit/dicomsort/: __init__.py  crawl.py  dcm_qt_tree.py  dicomsort.py  helper_functions.py  test_dicom_class.py  test_tree.py
src/nbiatoolkit/dicomtags/: __init__.py  tags.py
src/nbiatoolkit/logger/: README.md  __init__.py  logger.py
src/nbiatoolkit/utils/: README.md  __init__.py  conv_response_list.py  logger.py  md5.py  nbia_endpoints.py  parsers.py
src/tests/: __init__.py  oldtest_nbia.py  test_auth.py  test_nbia.py
src/utils/: __init__.py  nbia_endpoints.py
tests/: 2oldtest_nbia.py  __init__.py  deprecated_test_nbia.py  test_ModalityQueries.py  test_auth.py  test_dicom_helpers.py  test_downloadSeries.py  test_logger.py  test_md5.py  test_nbia.py  test_nbia_series_functions.py  test_new_query_functionality.py  test_parsers.py  test_tags.py  test_tcga_collections_separate.py
