[tool.poetry]
name = "nbiatoolkit"
version = "0.4.1"
description = "A python package to query the National Biomedical Imaging Archive (NBIA) database."
authors = ["Jermiah Joseph"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
pydicom = "^2.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
python-semantic-release = "^8.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "setup.py:__version__"
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.remote]
ignore_token_for_push = true
